File: plugins/nexus-repository-apt/src/main/java/org/sonatype/nexus/repository/apt/internal/cleanup/AptCleanupPolicyConfiguration.java