@@ -20,14 +20,14 @@ import javax.inject.Singleton;
 import org.sonatype.nexus.cleanup.config.CleanupPolicyConfiguration;
 import org.sonatype.nexus.repository.apt.AptFormat;
 
-import com.google.common.collect.ImmutableMap;
-
 import static org.sonatype.nexus.cleanup.config.CleanupPolicyConstants.IS_PRERELEASE_KEY;
 import static org.sonatype.nexus.cleanup.config.CleanupPolicyConstants.LAST_BLOB_UPDATED_KEY;
 import static org.sonatype.nexus.cleanup.config.CleanupPolicyConstants.LAST_DOWNLOADED_KEY;
 import static org.sonatype.nexus.cleanup.config.CleanupPolicyConstants.REGEX_KEY;
 
 /**
+ * APT format cleanup policy configuration.
+ * 
  * @since 3.19
  */
 @Named(AptFormat.NAME)
@@ -37,7 +37,8 @@ public class AptCleanupPolicyConfiguration
 {
   @Override
   public Map<String, Boolean> getConfiguration() {
-    return ImmutableMap.of(LAST_BLOB_UPDATED_KEY, true,
+    return Map.of(
+        LAST_BLOB_UPDATED_KEY, true,
         LAST_DOWNLOADED_KEY, true,
         IS_PRERELEASE_KEY, false,
         REGEX_KEY, true);
